--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,18 +1,60 @@
 <div fxLayout="row" fxLayoutAlign="center">
-    <div fxLayout="column" fxFlex="1000px">
-        <form>
-            <mat-card class="mt-60">
+    <div fxLayout="column" fxFlex="900px">
+        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
+            <mat-card>
                 <mat-card-header>
                     <mat-card-title>Dados Pessoais</mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="mt-20">
                     <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
-                        <mat-form-field class="full-width">
-                            <mat-label>Nome: *</mat-label>
-                            <input type="text" placeholder="Ex. José da Silva" matInput />
-                        </mat-form-field>
+                        <div fxLayout="column" fxFlex="800px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Nome: *</mat-label>
+                                <input type="text" placeholder="Ex. José da Silva" matInput name="nome" [(ngModel)]="cliente.nome" />
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="800px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Email: *</mat-label>
+                                <input type="email" placeholder="Digite seu email" matInput name="email" [(ngModel)]="cliente.email"/>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                            <mat-form-field class="full-width">
+                                <mat-label>CPF: *</mat-label>
+                                <input type="text" placeholder="Digite seu CPF" matInput name="cpf" [(ngModel)]="cliente.cpf" />
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Data de nascimento: *</mat-label>
+                                <input type="text" placeholder="Digite sua data de nascimento" matInput name="dataNascimento" [(ngModel)]="cliente.dataNascimento" />
+                            </mat-form-field>
+                        </div>
                     </div>
                 </mat-card-content>
+
+                <mat-card-actions>
+                    <button mat-flat-button color="primary" type="submit">
+                        <mat-icon fontIcon="save"></mat-icon>
+                        Salvar
+                    </button>
+                    <button mat-flat-button color="primary">
+                        <mat-icon fontIcon="refresh"></mat-icon>
+                        Atualizar
+                    </button>
+                    <button mat-flat-button color="accent" class="ml-5" type="click">
+                        <mat-icon fontIcon="backspace"></mat-icon>
+                        Limpar
+                    </button>
+                </mat-card-actions>
+
             </mat-card>
         </form>
     </div>
