--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <mat-icon fontIcon="feed"></mat-icon>
     Formulário
   </a>
-  <a routerLink="/cadastro" style="color: white;">
+  <a routerLink="/consulta" style="color: white;">
     <mat-icon fontIcon="search"></mat-icon>
     Consulta
   </a>
