--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxLayout="column" fxFlex="1000px">
-        <form class="mt-60" #buscaForm="ngForm">
+        <form class="mt-60" #buscaForm="ngForm" (ngSubmit)="pesquisarCliente()">
             <mat-card appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>Consulta</mat-card-title>
@@ -10,7 +10,7 @@
                         <div fxLayout="column" fxFlex="950px">
                             <mat-form-field class="full-width">
                                 <mat-label>Nome:</mat-label>
-                                <input matInput placeholder="Digite um nome. Ex: Maria">
+                                <input matInput name="nomeBusca" [(ngModel)]="nomeBusca" placeholder="Digite um nome. Ex: Maria">
                             </mat-form-field>
                         </div>
                     </div>                    
