--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -63,7 +63,7 @@
                     <ng-container matColumnDef="acoes">
                         <th mat-header-cell *matHeaderCellDef></th>
                             <td mat-cell *matCellDef="let cliente"> 
-                                <button mat-flat-button>
+                                <button mat-button (click)="prepararEditar(cliente.id)">
                                     <mat-icon fontIcon="edit"></mat-icon>
                                     Editar
                             </button> 
