--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -26,7 +26,11 @@
                         <div fxLayout="column" fxFlex="400px">
                             <mat-form-field class="full-width">
                                 <mat-label>CPF: *</mat-label>
-                                <input type="text" placeholder="Digite seu CPF" matInput name="cpf" [(ngModel)]="cliente.cpf" />
+                                <input type="text" 
+                                        placeholder="Digite seu CPF" 
+                                        matInput name="cpf" 
+                                        mask="000.000.000-00"
+                                        [(ngModel)]="cliente.cpf" />
                             </mat-form-field>
                         </div>
                     </div>
@@ -34,7 +38,11 @@
                         <div fxLayout="column" fxFlex="400px">
                             <mat-form-field class="full-width">
                                 <mat-label>Data de nascimento: *</mat-label>
-                                <input type="text" placeholder="Digite sua data de nascimento" matInput name="dataNascimento" [(ngModel)]="cliente.dataNascimento" />
+                                <input type="text" 
+                                        placeholder="Digite sua data de nascimento" 
+                                        matInput name="dataNascimento" 
+                                        mask="00/00/0000"
+                                        [(ngModel)]="cliente.dataNascimento" />
                             </mat-form-field>
                         </div>
                     </div>
