--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -50,9 +50,21 @@
                         <div fxLayout="column" fxFlex="400px">
                             <mat-form-field class="full-width">
                                 <mat-label>UF: *</mat-label>
-                                <mat-select>
-                                    <mat-option *ngFor="let uf of estados" (value)="uf.sigla">
+                                <mat-select (selectionChange)="carregarMunicipios($event)" [(value)]="cliente.uf">
+                                    <mat-option *ngFor="let uf of estados" [value]="uf.sigla">
                                         {{ uf.sigla }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                     <div fxLayout="row" fxLayoutAlign="start" fxLayoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                            <mat-form-field class="full-width">
+                                <mat-label>Municipio: *</mat-label>
+                                <mat-select [(value)]="cliente.municipio">
+                                    <mat-option *ngFor="let cidade of municipios" [value]="cidade.codigo_ibge">
+                                        {{ cidade.nome }}
                                     </mat-option>
                                 </mat-select>
                             </mat-form-field>
